k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: intellmeet-client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
