k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: server
